# eupago-python

./: .coverage 2  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docs.yml  release.yml  report.yml  test.yml
docs/: contributing.en.md  contributing.md  contributing.pt.md  index.en.md  index.md  index.pt.md  robots.txt  security.md  security.pt.md
docs/api/: index.en.md  index.md  index.pt.md
docs/errors/: index.en.md  index.md  index.pt.md
docs/getting-started/: configuration.en.md  configuration.pt.md  index.md  index.pt.md
docs/payments/: apple-pay.en.md  apple-pay.md  apple-pay.pt.md  credit-card.md  credit-card.pt.md  google-pay.en.md  google-pay.md  google-pay.pt.md  index.en.md  index.md  index.pt.md  mbway.md  mbway.pt.md  multibanco.md  multibanco.pt.md  pay-by-link.md  pay-by-link.pt.md  refund.md  refund.pt.md
docs/recipes/: django.en.md  django.md  django.pt.md  fastapi.en.md  fastapi.md  fastapi.pt.md  flask.en.md  flask.md  flask.pt.md  index.en.md  index.md  index.pt.md  persisting-payments.md  persisting-payments.pt.md
docs/webhooks/: index.md  index.pt.md  signature.md
examples/: 01_mbway_payment.py  02_mbway_auth_capture.py  02_webhook_fastapi.py  03_multibanco_reference.py  04_credit_card_payment.py  04_webhook_fastapi.py  05_async_usage.py  05_credit_card_subscription.py  06_apple_google_pay.py  06_error_handling.py  07_credit_card_payment.py  07_webhook_fastapi.py  08_async_usage.py  08_credit_card_subscription.py  09_apple_pay.py  09_error_handling.py  10_google_pay.py  11_pay_by_link.py  12_refund.py
overrides/: main.html
scripts/: prod_smoke_test.py
src/eupago/: __init__.py  _auth.py  _client.py  _config.py  _http.py  _logging.py  exceptions.py  utils.py
src/eupago/models/: __init__.py  _base.py  customer.py  payment.py  webhook.py
src/eupago/services/: __init__.py  _base.py  apple_pay.py  credit_card.py  google_pay.py  mbway.py  multibanco.py  pay_by_link.py  refund.py
src/eupago/webhooks/: __init__.py  _parser.py  _signature.py
tests/: conftest.py
tests/fixtures/: mbway_capture_success.json  mbway_create_error.json  mbway_create_success.json  multibanco_create_success.json  multibanco_info_paid.json  multibanco_info_pending.json  webhook_v2_paid.json
tests/integration/: sandbox_backoffice.py  test_apple_pay_live.py  test_credit_card_3ds.py  test_credit_card_authorize_capture_live.py  test_credit_card_live.py  test_credit_card_subscription_live.py  test_google_pay_live.py  test_mbway_auth_capture_live.py  test_pay_by_link_e2e_live.py  test_pay_by_link_live.py  test_refund_live.py  test_subscription_management_live.py  test_webhook_capture.py
tests/integration/infra/: .gitignore  README.md  build.sh  handler.py  main.tf  outputs.tf  variables.tf
tests/unit/: test_apple_pay.py  test_auth.py  test_client.py  test_credit_card.py  test_exceptions.py  test_google_pay.py  test_http.py  test_logging.py  test_mbway.py  test_models.py  test_multibanco.py  test_oauth.py  test_pay_by_link.py  test_refund.py  test_service_base.py  test_utils.py  test_webhooks.py
