[project]
name = "eupago"
version = "0.1.0"
description = "Unofficial Python SDK for the eupago payment gateway"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["eupago", "payments", "multibanco", "mbway", "portugal"]
authors = [{ name = "Victor Bilouro" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
crypto = ["cryptography>=42.0"]
integration = ["boto3>=1.34"]
e2e = ["playwright>=1.40"]
django = ["django>=4.0"]
fastapi = ["fastapi>=0.100"]
flask = ["flask>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "respx>=0.21",
    "mypy>=1.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "bandit>=1.7",
    "cryptography>=42.0",
]
docs = ["mkdocs-material", "mkdocstrings[python]", "mkdocs-static-i18n"]

[project.urls]
Homepage = "https://github.com/bilouro/eupago-python"
Documentation = "https://bilouro.github.io/eupago-python/"
Issues = "https://github.com/bilouro/eupago-python/issues"
Changelog = "https://github.com/bilouro/eupago-python/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eupago"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["S101", "UP007", "S105", "S106"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=eupago --cov-report=term-missing --cov-fail-under=85"
asyncio_mode = "auto"
markers = ["integration: tests against eupago sandbox (deselect with '-m not integration')"]
