[project]
name = "eupago"
version = "0.5.2"
description = "Modern, fully-typed Python SDK for the eupago payment gateway (Portugal): MB WAY, Multibanco, Credit Card, Pay By Link, refunds and webhooks — sync + async, production-validated."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "eupago",
    "eupago-python",
    "eupago-sdk",
    "payments",
    "payment-gateway",
    "portugal",
    "portuguese",
    "mbway",
    "mb-way",
    "multibanco",
    "credit-card",
    "pay-by-link",
    "paybylink",
    "webhook",
    "refund",
    "stripe-alternative",
    "fintech",
    "async",
    "asyncio",
    "httpx",
    "pydantic",
    "typed",
    "sdk",
    "api-client",
]
authors = [{ name = "Victor Bilouro", email = "consulting@bilouro.com" }]
maintainers = [{ name = "Victor Bilouro", email = "consulting@bilouro.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Portuguese",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    # Lets pydantic v2 evaluate `X | None` annotations on Python 3.9
    # (without this, model instantiation raises TypeError at runtime).
    'eval_type_backport>=0.2; python_version < "3.10"',
]

[project.optional-dependencies]
crypto = ["cryptography>=42.0"]
integration = ["boto3>=1.34"]
e2e = ["playwright>=1.40"]
django = ["django>=4.0"]
fastapi = ["fastapi>=0.100"]
flask = ["flask>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "respx>=0.21",
    "mypy>=1.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "bandit>=1.7",
    "cryptography>=42.0",
]
docs = [
    "mkdocs-material[imaging]",
    "mkdocstrings[python]",
    "mkdocs-static-i18n",
]

[project.urls]
Homepage = "https://github.com/bilouro/eupago-python"
Documentation = "https://bilouro.github.io/eupago-python/"
"Documentation (Português)" = "https://bilouro.github.io/eupago-python/pt/"
Source = "https://github.com/bilouro/eupago-python"
Issues = "https://github.com/bilouro/eupago-python/issues"
Discussions = "https://github.com/bilouro/eupago-python/discussions"
Changelog = "https://github.com/bilouro/eupago-python/blob/main/CHANGELOG.md"
Releases = "https://github.com/bilouro/eupago-python/releases"
Funding = "https://github.com/sponsors/bilouro"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eupago"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["S101", "UP007", "S105", "S106"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=eupago --cov-report=term-missing --cov-fail-under=85"
asyncio_mode = "auto"
markers = ["integration: tests against eupago sandbox (deselect with '-m not integration')"]
